--- a/index.htm
+++ b/index.htm
@@ -1,28 +1,58 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta http-equiv="content-type" content="text/html; charset=UTF-8">
+<!DOCTYPE html><html lang="en"><head>
+<meta http-equiv="content-type" content="text/html; charset=UTF-8">
+    <meta charset="utf-8">
     <title>Blackcoin More</title>
     <link rel="stylesheet" type="text/css" href="./css/default.css">
     <link rel="stylesheet" type="text/css" href="./css/all.css">
-    <link rel="icon" type="image/png" href="./images/favicon.png">
+    <link rel="icon" type="image/png" href="./images/favicon-bw.png">
+    <link rel="alternate" type="application/atom+xml" title="Blacknet" href="http://blacknet.wiki/atom.xml">
 </head>
 <body>
     <div id="header">
         <div id="logo">
             <a href="#">Blackcoin More</a>
         </div>
+        <!--<div id="navigation">
+            <a href="#l">1</a>
+            <a href="#">2</a>
+            <a href="#">3</a>
+            <a href="#">4</a>
+            <a href="#">5</a>
+        </div>-->
     </div>
 
     <div id="content">
-    <p style="text-align: center;">
-    <img src="./images/logo.png" alt="logo" style="margin: 10px 0 20px;"><br />
-    Coming soon...
-    </p>
+    <img src="./images/logo-bw.png" alt="logo" class="logo">
+    <h2>What is Blackcoin?</h2>
+    <p>Blackcoin is a decentralised digital currency with near-instant transaction speeds and negligible transaction fees built upon <em>Proof of Stake 3.0</em> (<em>PoSV3</em>, <em>BPoS</em>) as introduced by the Blackcoin development team.</p>
+
+    <h2>What is Blackcoin More?</h2>
+    <p>Blackcoin More is the name of open source software which enables the use of this currency. It takes Blackcoin to the next level by building upon Bitcoin Core 0.13.2 with some patches from newer Bitcoin Core versions to offer performance enhancements, wider compatibility with third party services and a more advanced base.</p>
+
+    <h2>Download <small>(v2.13.2.2 @ 2019-03-10)</small></h2>
+    <ul>
+        <li><a href="./files/blackcoin-more-win64-v2.13.2.2-a6d73fa.zip">Windows (x64)</a></li>
+        <li><a href="./files/blackcoin-more-linux64-v2.13.2.2-a6d73fa.zip">Linux (x64)</a></li>
+        <li><a href="./files/blackcoin-more-armv7-v2.13.2.2-a6d73fa.zip">ARMv7</a></li>
+        <li><a href="./files/blackcoin-more-aarch64-v2.13.2.2-a6d73fa.zip">ARMv8 (AArch64)</a></li>
+        <li><a href="./files/blackcoin-more-macos-v2.13.2.2-a6d73fa.zip">MacOS</a></li>
+    </ul>
+
+    <h2>Blackcoin resources</h2>
+    <ul>
+        <li><a href="https://gitlab.com/blackcoin/">GitLab</a></li>
+        <li><a href="https://github.com/CoinBlack/">GitHub</a></li>
+        <li><a href="https://blackcoin.org/">Website</a></li>
+        <li><a href="https://bitcointalk.org/index.php?topic=3017838.new#new">Bitcointalk</a></li>
+        <li><a href="http://www.reddit.com/r/blackcoin">Reddit</a></li>
+        <li><a href="https://twitter.com/BlackcoinOrg">Twitter</a></li>
+        <li><a href="https://t.me/blackcoin">Telegram</a></li>
+        <li><a href="https://gitter.im/BlackCoin_Hub/">Gitter</a></li>
+    </ul>
+
     </div>
     <div id="footer">
         Copyright &copy; 2018-2019 The Blackcoin More developers
     </div>
 
-</body>
-</html>
+</body></html>
