--- a/index.htm
+++ b/index.htm
@@ -5,7 +5,7 @@
     <link rel="stylesheet" type="text/css" href="./css/default.css">
     <link rel="stylesheet" type="text/css" href="./css/all.css">
     <link rel="icon" type="image/png" href="./images/favicon-bw.png">
-    <link rel="alternate" type="application/atom+xml" title="Blacknet" href="http://blacknet.wiki/atom.xml">
+
 </head>
 <body>
     <div id="header">
@@ -40,14 +40,18 @@
 
     <h2>Blackcoin resources</h2>
     <ul>
-        <li><a href="https://gitlab.com/blackcoin/">GitLab</a></li>
-        <li><a href="https://github.com/CoinBlack/">GitHub</a></li>
-        <li><a href="https://blackcoin.org/">Website</a></li>
+        <li><a href="https://gitlab.com/blackcoin/">GitLab - Official Client Repos</a></li>
+        <li><a href="https://github.com/CoinBlack/">GitHub - Webpages and Binaries</a></li>
+        <li><a href="https://blackcoin.org/">Protocol Focused Website</a></li>
+        <li><a href="https://blackcoin.nl/">Development/Community Website</a></li>
         <li><a href="https://bitcointalk.org/index.php?topic=3017838.new#new">Bitcointalk</a></li>
+        <li><a href="https://discord.gg/rZnhcwf/">Discord</a></li>
         <li><a href="http://www.reddit.com/r/blackcoin">Reddit</a></li>
+        <li><a href="https://gitter.im/BlackCoin_Hub/">Gitter</a></li>
         <li><a href="https://twitter.com/BlackcoinOrg">Twitter</a></li>
         <li><a href="https://t.me/blackcoin">Telegram</a></li>
-        <li><a href="https://gitter.im/BlackCoin_Hub/">Gitter</a></li>
+        <li><a href="https://facebook.com/blackcoinorg">Facebook</a></li>
+                
     </ul>
 
     </div>
