--- a/index.htm
+++ b/index.htm
@@ -37,13 +37,15 @@
         <li><a href="./files/blackcoin-more-aarch64-v2.13.2.2-a6d73fa.zip">ARMv8 (AArch64)</a></li>
         <li><a href="./files/blackcoin-more-macos-v2.13.2.2-a6d73fa.zip">MacOS</a></li>
     </ul>
-
     <h2>Blackcoin resources</h2>
     <ul>
-        <li><a href="https://gitlab.com/blackcoin/">GitLab - Official Client Repos</a></li>
-        <li><a href="https://github.com/CoinBlack/">GitHub - Webpages and Binaries</a></li>
-        <li><a href="https://blackcoin.org/">Protocol Focused Website</a></li>
-        <li><a href="https://blackcoin.nl/">Development/Community Website</a></li>
+        <li><a href="https://gitlab.com/blackcoin/">GitLab (official client repos)</a></li>
+        <li><a href="https://github.com/CoinBlack/">GitHub (webpages and binaries)</a></li>
+        <li><a href="https://blackcoin.org/">Protocol-focused website</a></li>
+    </ul>
+    <h2>Blackcoin community resources</h2>
+    <ul>
+        <li><a href="https://blackcoin.nl/">Development/community website</a></li>
         <li><a href="https://bitcointalk.org/index.php?topic=3017838.new#new">Bitcointalk</a></li>
         <li><a href="https://discord.gg/rZnhcwf/">Discord</a></li>
         <li><a href="http://www.reddit.com/r/blackcoin">Reddit</a></li>
@@ -51,7 +53,6 @@
         <li><a href="https://twitter.com/BlackcoinOrg">Twitter</a></li>
         <li><a href="https://t.me/blackcoin">Telegram</a></li>
         <li><a href="https://facebook.com/blackcoinorg">Facebook</a></li>
-                
     </ul>
 
     </div>
