--- a/index.htm
+++ b/index.htm
@@ -37,7 +37,7 @@
         <li><a href="./files/blackcoin-more-aarch64-v2.13.2.2-a6d73fa.zip">ARMv8 (AArch64)</a></li>
         <li><a href="./files/blackcoin-more-macos-v2.13.2.2-a6d73fa.zip">MacOS</a></li>
     </ul>
-    <h2>Blackcoin resources</h2>
+    <h2>Blackcoin protocol resources</h2>
     <ul>
         <li><a href="https://gitlab.com/blackcoin/">GitLab (official client repos)</a></li>
         <li><a href="https://github.com/CoinBlack/">GitHub (webpages and binaries)</a></li>
