--- a/index.htm
+++ b/index.htm
@@ -48,6 +48,7 @@
         <li><a href="https://blackcoin.nl/">Development/community website</a></li>
         <li><a href="https://bitcointalk.org/index.php?topic=3017838.new#new">Bitcointalk</a></li>
         <li><a href="https://discord.gg/rZnhcwf/">Discord</a></li>
+        <li><a href="https://keybase.io/team/blackcoin">Keybase</a></li>
         <li><a href="http://www.reddit.com/r/blackcoin">Reddit</a></li>
         <li><a href="https://gitter.im/BlackCoin_Hub/">Gitter</a></li>
         <li><a href="https://twitter.com/BlackcoinOrg">Twitter</a></li>
