--- a/index.htm
+++ b/index.htm
@@ -8,11 +8,10 @@
 </head>
 <body>
     <div id="header">
-        <div id="logo">
             <a href="#">Blackcoin More</a>
-        </div>
-    <img src="./images/logo-bw.png" alt="logo" class="logo">  
-
+    </div>
+    <div id="logo" style="float:right; height:25%; width:25%">
+        <img src="./images/logo-bw.png" alt="logo" class="logo">  
         <!--<div id="navigation">
             <a href="#l">1</a>
             <a href="#">2</a>
