--- a/index.htm
+++ b/index.htm
@@ -4,12 +4,12 @@
     <title>Blackcoin More</title>
     <link rel="stylesheet" type="text/css" href="./css/default.css">
     <link rel="icon" type="image/png" href="./images/favicon-bw.png">
-    <div id="header">
+        <div id="header">
             <a href="#">Blackcoin More</a>
-    </div>
+        </div>
 </head>
 <body>
-    <div id="logo" style="float:right; height:25%; width:25%">
+    <div id="logo" style="float:right; height:150px; width:150px">
         <img src="./images/logo-bw.png" alt="logo" class="logo">  
         <!--<div id="navigation">
             <a href="#l">1</a>
