--- a/index.htm
+++ b/index.htm
@@ -5,11 +5,11 @@
     <link rel="stylesheet" type="text/css" href="./css/default.css">
     <link rel="icon" type="image/png" href="./images/favicon-bw.png">
         <div id="header">
-            <a href="#">Blackcoin More</a>
+            <a href="#"><h1>Blackcoin More</h1></a>
         </div>
 </head>
 <body>
-    <div id="logo" style="float:right; height:150px; width:150px">
+    <div id="logo" style="float:right; height:50px; width:50px">
         <img src="./images/logo-bw.png" alt="logo" class="logo">  
         <!--<div id="navigation">
             <a href="#l">1</a>
