--- a/index.htm
+++ b/index.htm
@@ -9,7 +9,7 @@
         </div>
 </head>
 <body>
-    <div id="logo" style="float:right; height:50px; width:50px">
+    <div id="logo" style="float:right; height:50px; width:50px;">
         <img src="./images/logo-bw.png" alt="logo" class="logo">  
         <!--<div id="navigation">
             <a href="#l">1</a>
