--- a/index.htm
+++ b/index.htm
@@ -20,7 +20,7 @@
         </div>-->
     </div>
 
-    <div id="what_is">        
+    <div id="what_is" style="clear:both;">    <!-- style makes logo under text -->
     <h2>What is Blackcoin?</h2>
     <p>Blackcoin is a decentralised digital currency with near-instant transaction speeds and negligible transaction fees built upon <em>Proof of Stake 3.0</em> (<em>PoSV3</em>, <em>BPoS</em>) as introduced by the Blackcoin development team.</p>
 
