--- a/index.htm
+++ b/index.htm
@@ -24,8 +24,8 @@
     <p>Blackcoin is a decentralised digital currency with near-instant transaction speeds and negligible transaction fees built upon <em>Proof of Stake 3.0</em> (<em>PoSV3</em>, <em>BPoS</em>) as introduced by the Blackcoin development team.</p>
     <h2>What is Blackcoin More?</h2>
     <p>Blackcoin More is the name of open source software which enables the use of this currency. It takes Blackcoin to the next level by building upon Bitcoin Core 0.13.2 with some patches from newer Bitcoin Core versions to offer performance enhancements, wider compatibility with third party services and a more advanced base.</p>
-    </div><!--
- --><div id="links">
+    </div>
+    <div id="links">
     <h2>Download <small>(v2.13.2.2 @ 2019-03-13)</small></h2>
     <ul>
         <li><a href="./files/blackcoin-more-win64-v2.13.2.2-87e1ea7.zip">Windows (x64)</a></li>
