Add upgrade notes

--- a/index.htm
+++ b/index.htm
@@ -34,6 +34,15 @@
         <li><a href="./files/blackcoin-more-aarch64-v2.13.2.3-1b018fd.zip">ARMv8 (AArch64)</a></li>
         <li><a href="./files/blackcoin-more-macos-v2.13.2.3-1b018fd.zip">MacOS</a></li>
     </ul>
+    <h2>How to upgrade?</h2>
+    <p><b>If you are running Blackcoin Legacy wallet v1.2.x:</b><br />
+    You need to download the blockchain and send your funds to the new wallet.</p>
+
+    <p><b>If you are running Blackcoin Lore wallet v2.12.x:</b><br />
+    Technically you can point Blackcoin More installation to your data folder, but it is recommended to create a new installation in the default data folder. The same for your funds, it is technically possible to use the same wallet.dat file, but it is better to use the wallet created by new installation. Send your funds to this new wallet.</p>
+
+    <p><b>If you are running Blackcoin More wallet v2.13.x:</b><br />
+    You can upgrade just by replacing binaries.</p>
     <h2>Blackcoin protocol resources</h2>
     <ul>
         <li><a href="https://gitlab.com/blackcoin/">GitLab (official client repos)</a></li>
