--- a/index.htm
+++ b/index.htm
@@ -26,13 +26,13 @@
     <p>Blackcoin More is the name of open source software which enables the use of this currency. It takes Blackcoin to the next level by building upon Bitcoin Core 0.13.2 with some patches from newer Bitcoin Core versions to offer performance enhancements, wider compatibility with third party services and a more advanced base.</p>
     </div>
     <div id="links">
-    <h2>Download <small>(v2.13.2.3 @ 2019-04-02)</small></h2>
+    <h2>Download <small>(v2.13.2.3-c7eef36834 @ 2019-04-09)</small></h2>
     <ul>
-        <li><a href="./files/blackcoin-more-win64-v2.13.2.3-1b018fd.zip">Windows (x64)</a></li>
-        <li><a href="./files/blackcoin-more-linux64-v2.13.2.3-1b018fd.zip">Linux (x64)</a></li>
-        <li><a href="./files/blackcoin-more-armv7-v2.13.2.3-1b018fd.zip">ARMv7</a></li>
-        <li><a href="./files/blackcoin-more-aarch64-v2.13.2.3-1b018fd.zip">ARMv8 (AArch64)</a></li>
-        <li><a href="./files/blackcoin-more-macos-v2.13.2.3-1b018fd.zip">MacOS</a></li>
+        <li><a href="./files/blackcoin-more-win64-v2.13.2.3-c7eef36834.zip">Windows (x64)</a></li>
+        <li><a href="./files/blackcoin-more-linux64-v2.13.2.3-c7eef36834.zip">Linux (x64)</a></li>
+        <li><a href="./files/blackcoin-more-armv7-v2.13.2.3-c7eef36834.zip">ARMv7</a></li>
+        <li><a href="./files/blackcoin-more-aarch64-v2.13.2.3-c7eef36834.zip">ARMv8 (AArch64)</a></li>
+        <li><a href="./files/blackcoin-more-macos-v2.13.2.3-c7eef36834.zip">MacOS</a></li>
     </ul>
     <h2>How to upgrade?</h2>
     <h3>If you are running Blackcoin Legacy wallet v1.2.x:</h3>
