Add BLK donation address

--- a/index.htm
+++ b/index.htm
@@ -63,6 +63,7 @@
     </ul>
     </div>
     <div id="footer">
-        Copyright &copy; 2018-2019 The Blackcoin More developers
+        <p>Copyright &copy; 2018-2019 The Blackcoin More developers</p>
+        <p>BLK: BDFgwjx8q9xrpeNzyY1Hz8x36Dmg39C4BU</p>
     </div>
 </body></html>
