updated community channels

--- a/index.htm
+++ b/index.htm
@@ -58,12 +58,15 @@
         <li><a href="http://www.reddit.com/r/blackcoin">Reddit</a></li>
         <li><a href="https://gitter.im/BlackCoin_Hub/">Gitter</a></li>
         <li><a href="https://twitter.com/BlackcoinOrg">Twitter</a></li>
+        <li><a href="https://twitter.com/BlackcoinNL">Development/community Twitter</a></li>
+        <li><a href="https://t.me/blackcoinnl">Development/community Telegram</a></li>
         <li><a href="https://t.me/blackcoin">Telegram</a></li>
+        <li><a href="https://webchat.freenode.net/#blackcoin">IRC Bridge</a></li>
         <li><a href="https://facebook.com/blackcoinorg">Facebook</a></li>
     </ul>
     </div>
     <div id="footer">
-        <p>Copyright &copy; 2018-2019 The Blackcoin More developers</p>
+        <p>Copyright &copy; 2018-2020 The Blackcoin More developers</p>
         <p>BLK: BDFgwjx8q9xrpeNzyY1Hz8x36Dmg39C4BU</p>
     </div>
 </body></html>
