update download links

--- a/index.htm
+++ b/index.htm
@@ -26,13 +26,13 @@
     <p>Blackcoin More is the name of open source software which enables the use of this currency. It takes Blackcoin to the next level by building upon Bitcoin Core 0.13.2 with some patches from newer Bitcoin Core versions to offer performance enhancements, wider compatibility with third party services and a more advanced base.</p>
     </div>
     <div id="links">
-    <h2>Download <small>(v2.13.2.4-b1db5a5aa2 @ 2019-12-24)</small></h2>
+    <h2>Download <small>(v2.13.2.5-4e9af875c9 @ 2020-04-28)</small></h2>
     <ul>
-        <li><a href="./files/blackcoin-more-win64-v2.13.2.4-b1db5a5aa2.zip">Windows (x64)</a></li>
-        <li><a href="./files/blackcoin-more-linux64-v2.13.2.4-b1db5a5aa2.zip">Linux (x64)</a></li>
-        <li><a href="./files/blackcoin-more-armv7-v2.13.2.4-b1db5a5aa2.zip">ARMv7</a></li>
-        <li><a href="./files/blackcoin-more-aarch64-v2.13.2.4-b1db5a5aa2.zip">ARMv8 (AArch64)</a></li>
-        <li><a href="./files/blackcoin-more-macos-v2.13.2.4-b1db5a5aa2.zip">MacOS</a></li>
+        <li><a href="./files/blackcoin-more-win64-v2.13.2.5-4e9af875c9.zip">Windows (x64)</a></li>
+        <li><a href="./files/blackcoin-more-linux64-v2.13.2.5-4e9af875c9.zip">Linux (x64)</a></li>
+        <li><a href="./files/blackcoin-more-armv7-v2.13.2.5-4e9af875c9.zip">ARMv7</a></li>
+        <li><a href="./files/blackcoin-more-aarch64-v2.13.2.5-4e9af875c9.zip">ARMv8 (AArch64)</a></li>
+        <li><a href="./files/blackcoin-more-macos-v2.13.2.5-4e9af875c9.zip">MacOS</a></li>
     </ul>
     <h2>How to upgrade?</h2>
     <h3>If you are running Blackcoin Legacy wallet v1.2.x:</h3>
@@ -42,7 +42,7 @@
     <p>Technically you can point Blackcoin More installation to your data folder, but it is recommended to create a new installation in the default data folder. The same for your funds, it is technically possible to use the same wallet.dat file, but it is better to use the wallet created by new installation. Send your funds to this new wallet.</p>
 
     <h3>If you are running Blackcoin More wallet v2.13.x:</h3>
-    <p>You can upgrade just by replacing binaries.</p>
+    <p>You can upgrade just by replacing binaries, but backup your wallet first (wallet.dat)</p>
     <h2>Blackcoin protocol resources</h2>
     <ul>
         <li><a href="https://gitlab.com/blackcoin/">GitLab (official client repos)</a></li>
