link to upgrade info

--- a/index.htm
+++ b/index.htm
@@ -1,58 +1,71 @@
-<!DOCTYPE html><html lang="en"><head>
-<meta http-equiv="content-type" content="text/html; charset=UTF-8">
-    <meta charset="utf-8">
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta http-equiv="content-type" content="text/html; charset=UTF-8">
     <title>Blackcoin More</title>
     <link rel="stylesheet" type="text/css" href="./css/default.css">
     <link rel="icon" type="image/png" href="./images/favicon-bw.png">
-</head>
-<body>
+  </head>
+  <body>
     <div id="header">
-        <div id="logo">
-            <a href="#">Blackcoin More</a>
-        </div>
-        <!--<div id="navigation">
-            <a href="#l">1</a>
-            <a href="#">2</a>
-            <a href="#">3</a>
-            <a href="#">4</a>
-            <a href="#">5</a>
-        </div>-->
-    </div>
-    <div id="content">
-    <img src="./images/logo-bw.png" alt="logo" class="logo">
-    <h2>What is Blackcoin?</h2>
-    <p>Blackcoin is a decentralised digital currency with near-instant transaction speeds and negligible transaction fees built upon <em>Proof of Stake 3.0</em> (<em>PoSV3</em>, <em>BPoS</em>) as introduced by the Blackcoin development team.</p>
-    <h2>What is Blackcoin More?</h2>
-    <p>Blackcoin More is the name of open source software which enables the use of this currency. It takes Blackcoin to the next level by building upon Bitcoin Core 0.13.2 with some patches from newer Bitcoin Core versions to offer performance enhancements, wider compatibility with third party services and a more advanced base.</p>
+      <div id="logo"> <a href="#">Blackcoin More</a> </div>
+      <!--<div id="navigation">
+            <a href="#l">1</a>            <a href="#">2</a>
+            <a href="#">3</a>            <a href="#">4</a>
+            <a href="#">5</a>        </div>--> </div>
+    <div id="content"> <img src="./images/logo-bw.png" alt="logo" class="logo">
+      <h2>What is Blackcoin?</h2>
+      <p>Blackcoin is a decentralised digital currency with near-instant
+        transaction speeds and negligible transaction fees built upon <em>Proof
+          of Stake 3.0</em> (<em>PoSV3</em>, <em>BPoS</em>) as introduced by
+        the Blackcoin development team.</p>
+      <h2>What is Blackcoin More?</h2>
+      <p>Blackcoin More is the name of open source software which enables the
+        use of this currency. It takes Blackcoin to the next level by building
+        upon Bitcoin Core 0.13.2 with some patches from newer Bitcoin Core
+        versions to offer performance enhancements, wider compatibility with
+        third party services and a more advanced base.</p>
     </div>
     <div id="links">
-    <h2>Download <small>(v2.13.2.5-4e9af875c9 @ 2020-04-28)</small></h2>
-    <ul>
-        <li><a href="./files/blackcoin-more-win64-v2.13.2.5-4e9af875c9.zip">Windows (x64)</a></li>
-        <li><a href="./files/blackcoin-more-linux64-v2.13.2.5-4e9af875c9.zip">Linux (x64)</a></li>
+      <h2>Download <small>(v2.13.2.5-4e9af875c9 @ 2020-04-28)</small></h2>
+      <p><i>specific upgrade info on this release can be found <a href="https://blackcoin.nl/blackcoin-more-wallet-v2-13-2-5/"
+            title="BACKUP YOUR WALLET">here</a></i></p>
+      <ul>
+        <li><a href="./files/blackcoin-more-win64-v2.13.2.5-4e9af875c9.zip">Windows
+            (x64)</a></li>
+        <li><a href="./files/blackcoin-more-linux64-v2.13.2.5-4e9af875c9.zip">Linux
+            (x64)</a></li>
         <li><a href="./files/blackcoin-more-armv7-v2.13.2.5-4e9af875c9.zip">ARMv7</a></li>
-        <li><a href="./files/blackcoin-more-aarch64-v2.13.2.5-4e9af875c9.zip">ARMv8 (AArch64)</a></li>
+        <li><a href="./files/blackcoin-more-aarch64-v2.13.2.5-4e9af875c9.zip">ARMv8
+            (AArch64)</a></li>
         <li><a href="./files/blackcoin-more-macos-v2.13.2.5-4e9af875c9.zip">MacOS</a></li>
-    </ul>
-    <h2>How to upgrade?</h2>
-    <h3>If you are running Blackcoin Legacy wallet v1.2.x:</h3>
-    <p>You need to download the blockchain and send your funds to the new wallet.</p>
-
-    <h3>If you are running Blackcoin Lore wallet v2.12.x:</h3>
-    <p>Technically you can point Blackcoin More installation to your data folder, but it is recommended to create a new installation in the default data folder. The same for your funds, it is technically possible to use the same wallet.dat file, but it is better to use the wallet created by new installation. Send your funds to this new wallet.</p>
-
-    <h3>If you are running Blackcoin More wallet v2.13.x:</h3>
-    <p>You can upgrade just by replacing binaries, but backup your wallet first (wallet.dat)</p>
-    <h2>Blackcoin protocol resources</h2>
-    <ul>
-        <li><a href="https://gitlab.com/blackcoin/">GitLab (official client repos)</a></li>
-        <li><a href="https://github.com/CoinBlack/">GitHub (webpages and binaries)</a></li>
+      </ul>
+      <h2>How to upgrade?</h2>
+      <h3>If you are running Blackcoin Legacy wallet v1.2.x:</h3>
+      <p>You need to download the blockchain and send your funds to the new
+        wallet.</p>
+      <h3>If you are running Blackcoin Lore wallet v2.12.x:</h3>
+      <p>Technically you can point Blackcoin More installation to your data
+        folder, but it is recommended to create a new installation in the
+        default data folder. The same for your funds, it is technically possible
+        to use the same wallet.dat file, but it is better to use the wallet
+        created by new installation. Send your funds to this new wallet.</p>
+      <h3>If you are running Blackcoin More wallet v2.13.x:</h3>
+      <p>You can upgrade just by replacing binaries, but <b>backup your wallet</b>
+        first (wallet.dat)</p>
+      <h2>Blackcoin protocol resources</h2>
+      <ul>
+        <li><a href="https://gitlab.com/blackcoin/">GitLab (official client
+            repos)</a></li>
+        <li><a href="https://github.com/CoinBlack/">GitHub (webpages and
+            binaries)</a></li>
         <li><a href="https://blackcoin.org/">Protocol-focused website</a></li>
-    </ul>
-    <h2>Blackcoin community resources</h2>
-    <ul>
+      </ul>
+      <h2>Blackcoin community resources</h2>
+      <ul>
         <li><a href="https://blackcoin.nl/">Development/community website</a></li>
-        <li><a href="https://twitter.com/BlackcoinNL">Development/community Twitter</a></li>
+        <li><a href="https://twitter.com/BlackcoinNL">Development/community
+            Twitter</a></li>
         <li><a href="https://t.me/blackcoinnl">Development/community Telegram</a></li>
         <li><a href="https://bitcointalk.org/index.php?topic=3017838.new#new">Bitcointalk</a></li>
         <li><a href="https://discord.gg/rZnhcwf/">Discord</a></li>
@@ -63,10 +76,11 @@
         <li><a href="https://t.me/blackcoin">Telegram</a></li>
         <li><a href="https://webchat.freenode.net/#blackcoin">IRC Bridge</a></li>
         <li><a href="https://facebook.com/blackcoinorg">Facebook</a></li>
-    </ul>
+      </ul>
     </div>
     <div id="footer">
-        <p>Copyright &copy; 2018-2020 The Blackcoin More developers</p>
-        <p>BLK: BDFgwjx8q9xrpeNzyY1Hz8x36Dmg39C4BU</p>
+      <p>Copyright © 2018-2020 The Blackcoin More developers</p>
+      <p>BLK: BDFgwjx8q9xrpeNzyY1Hz8x36Dmg39C4BU</p>
     </div>
-</body></html>
+  </body>
+</html>
