changed Discord invite
Invite was not valid

--- a/index.htm
+++ b/index.htm
@@ -67,7 +67,7 @@
             Twitter</a></li>
         <li><a href="https://t.me/blackcoinnl">Development/community Telegram</a></li>
         <li><a href="https://bitcointalk.org/index.php?topic=3017838.new#new">Bitcointalk</a></li>
-        <li><a href="https://discord.gg/rZnhcwf/">Discord</a></li>
+        <li><a href="https://discord.gg/hjNUgWD">Discord</a></li>
         <li><a href="https://keybase.io/team/blackcoin">Keybase</a></li>
         <li><a href="http://www.reddit.com/r/blackcoin">Reddit</a></li>
         <li><a href="https://gitter.im/BlackCoin_Hub/">Gitter</a></li>
