--- a/index.htm
+++ b/index.htm
@@ -2,26 +2,26 @@
 <html lang="en">
   <head>
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
-    <title>Blackcoin More</title>
+    <title>Proverb Being</title>
     <link rel="stylesheet" type="text/css" href="./css/default.css">
     <link rel="icon" type="image/png" href="./images/favicon-bw.png">
   </head>
   <body>
     <div id="header">
-      <div id="logo"> <a href="#">Blackcoin More</a> </div>
+      <div id="logo"> <a href="#">Proverb Being</a> </div>
       <!--<div id="navigation">
             <a href="#l">1</a>            <a href="#">2</a>
             <a href="#">3</a>            <a href="#">4</a>
             <a href="#">5</a>        </div>--> </div>
     <div id="content"> <img src="./images/logo-bw.png" alt="logo" class="logo">
-      <h2>What is Blackcoin?</h2>
-      <p>Blackcoin is a decentralised digital currency with near-instant
+      <h2>What is Proverb?</h2>
+      <p>Proverb is a decentralised digital currency with near-instant
         transaction speeds and negligible transaction fees built upon <em>Proof
           of Stake 3.0</em> (<em>PoSV3</em>, <em>BPoS</em>) as introduced by
-        the Blackcoin development team.</p>
-      <h2>What is Blackcoin More?</h2>
-      <p>Blackcoin More is the name of open source software which enables the
-        use of this currency. It takes Blackcoin to the next level by building
+        the Proverb under the development of AYCHDeveloper.</p>
+      <h2>What is Proverb Being?</h2>
+      <p>Proverb Being is the name of open source software which enables the
+        use of this currency. It takes Proverb to the next level by building
         upon Bitcoin Core 0.13.2 with some patches from newer Bitcoin Core
         versions to offer performance enhancements, wider compatibility with
         third party services and a more advanced base.</p>
@@ -40,19 +40,19 @@
         <li><a href="./files/blackcoin-more-macos-v2.13.2.5-4e9af875c9.zip">MacOS</a></li>
       </ul>
       <h2>How to upgrade?</h2>
-      <h3>If you are running Blackcoin Legacy wallet v1.2.x:</h3>
+      <h3>If you are running Proverb Legacy wallet v1.2.x:</h3>
       <p>You need to download the blockchain and send your funds to the new
         wallet.</p>
-      <h3>If you are running Blackcoin Lore wallet v2.12.x:</h3>
-      <p>Technically you can point Blackcoin More installation to your data
+      <h3>If you are running Proverb Being wallet v2.12.x:</h3>
+      <p>Technically you can point Proverb Being installation to your data
         folder, but it is recommended to create a new installation in the
         default data folder. The same for your funds, it is technically possible
         to use the same wallet.dat file, but it is better to use the wallet
         created by new installation. Send your funds to this new wallet.</p>
-      <h3>If you are running Blackcoin More wallet v2.13.x:</h3>
+      <h3>If you are running Proverb Being wallet v2.13.x:</h3>
       <p>You can upgrade just by replacing binaries, but <b>backup your wallet</b>
         first (wallet.dat)</p>
-      <h2>Blackcoin protocol resources</h2>
+      <h2>Proverb protocol resources</h2>
       <ul>
         <li><a href="https://gitlab.com/blackcoin/">GitLab (official client
             repos)</a></li>
@@ -60,7 +60,7 @@
             binaries)</a></li>
         <li><a href="https://blackcoin.org/">Protocol-focused website</a></li>
       </ul>
-      <h2>Blackcoin community resources</h2>
+      <h2>Proverb community resources</h2>
       <ul>
         <li><a href="https://blackcoin.nl/">Development/community website</a></li>
         <li><a href="https://twitter.com/BlackcoinNL">Development/community
@@ -78,8 +78,8 @@
       </ul>
     </div>
     <div id="footer">
-      <p>Copyright © 2018-2020 The Blackcoin More developers</p>
-      <p>BLK: BDFgwjx8q9xrpeNzyY1Hz8x36Dmg39C4BU</p>
+      <p>Copyright © 2015 - 2020 The AYCHDeveloper</p>
+      <p>VERB: qzk8ax78583jqyh9jg8h95u7wh5v9wcxms3zlmpdfw</p>
     </div>
   </body>
 </html>
